name:                qsim
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vizziv/qsim#readme
license:             BSD3
license-file:        LICENSE
author:              Ziv Scully
maintainer:          zivscully@gmail.com
copyright:           Copyright (c) 2017 Ziv Scully
category:            Miscellaneous
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Arrival
                     , Bisect
                     , Dmrl
                     , Heap
                     , Job
                     , Simulate
                     , Stream
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , mtl
                     , random
                     , semigroupoids
  default-language:    Haskell2010

executable qsim-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lens
                     , qsim
  default-language:    Haskell2010

test-suite qsim-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , qsim
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vizziv/qsim
